# cocaine

./: Cargo.toml  LICENSE  README.md
.github/: formula.rb.tmpl
.github/workflows/: homebrew.yml  release.yml
src/: main.rs  power.rs
src/power/: linux.rs  macos.rs  mod.rs  windows.rs
