[package]
name = "cocaine"
version = "0.2.0"
edition = "2024"
authors = ["Riza Sabuncu"]
description = "Keep your machine awake. Like caffeinate, but with more kick."
license = "MIT"
repository = "https://github.com/riza/cocaine"
homepage = "https://github.com/riza/cocaine"
readme = "README.md"
keywords = ["caffeinate", "sleep", "power", "cli", "wakelock"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power"] }
